# BDII

./: README.md
Aula1/: teste1.sql
Aula1/aula01/: tabela01.sql  tabela02.sql
Aula2/: tarefa_aula2.sql  triggers.sql
Aula3/: atv1.sql  atv2.sql  tarefa1.sql
Aula4/: atv1.sql  atv1_questoes.sql  atv2_cte_learning.sql
Aula5/: atv1.sql  atv1_1.sql
TarefaIndices/: CMakeLists.txt  gerador_de_nomes.cpp  tarefa.sql
Trabalho 1/: Integrantes.txt  Trabalho1.sql  Trabalho1_Procedures.sql  Trabalho1_Triggers.sql
